# ChangeLog for perl-core/PodParser
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/PodParser/ChangeLog,v 1.13 2006/05/26 11:06:50 gmsoft Exp $

  26 May 2006; Guy Martin <gmsoft@gentoo.org> PodParser-1.32.ebuild:
  Stable on hppa.

  26 May 2006; Markus Rothe <corsair@gentoo.org> PodParser-1.32.ebuild:
  Stable on ppc64; bug #133989

  26 May 2006; <nixnut@gentoo.org> PodParser-1.32.ebuild:
  Stable on ppc. Bug #133989

*PodParser-1.34 (05 May 2006)

  05 May 2006; Christian Hartmann <ian@gentoo.org> +PodParser-1.34.ebuild:
  Version bump

  14 Mar 2006; Chris White <chriswhite@gentoo.org> -PodParser-1.28.ebuild,
  PodParser-1.30.ebuild:
  amd64 stable for 1.30. Removed old 1.28.

  25 Feb 2006; Joshua Kinard <kumba@gentoo.org> PodParser-1.30.ebuild:
  Marked stable on mips.

  31 Jan 2006; Aron Griffis <agriffis@gentoo.org> PodParser-1.30.ebuild:
  Mark 1.30 stable on alpha

*PodParser-1.32 (13 Jan 2006)

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org>
  +PodParser-1.32.ebuild:
  Version bump

  11 Jan 2006; <mcumming@gentoo.org> PodParser-1.28.ebuild,
  PodParser-1.30.ebuild:
  DESCRIPTION fix, thanx Beau

  02 Jan 2006; Michael Hanselmann <hansmi@gentoo.org> PodParser-1.30.ebuild:
  Stable on ppc.

  31 Dec 2005; Markus Rothe <corsair@gentoo.org> PodParser-1.30.ebuild:
  Stable on ppc64

*PodParser-1.28 (30 Dec 2005)

  30 Dec 2005; <mcumming@gentoo.org> +metadata.xml, +PodParser-1.28.ebuild,
  +PodParser-1.30.ebuild:
  Moving from dev-perl to perl-core

*PodParser-1.30 (29 Apr 2005)

  29 Apr 2005; Michael Cummings <mcummings@gentoo.org>
  -PodParser-1.22.ebuild, +PodParser-1.30.ebuild:
  Cleaning for mirror

  07 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> PodParser-1.28.ebuild:
  Stable on ppc.

  02 Apr 2005; Stephen P. Becker <geoman@gentoo.org> PodParser-1.28.ebuild:
  stable on mips
