@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/PodParser/Attic/PodParser-1.34.ebuild,v 1.1 2006/05/05 17:14:09 ian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/PodParser/Attic/PodParser-1.34.ebuild,v 1.2 2006/05/26 13:46:29 flameeyes Exp $
 
 inherit perl-module
 MY_P=Pod-Parser-${PV}
@@ -12,7 +12,7 @@ SRC_URI="mirror://cpan/authors/id/M/MA/MAREKR/${MY_P}.tar.gz"
 
 LICENSE="|| ( Artistic GPL-2 )"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd"
 IUSE=""
 
 SRC_TEST="do"
