@@ -1,1 +1,3 @@
 MD5 e56bc3ef77f5f97946bd33aca947e6a5 Test-Harness-2.56.tar.gz 65088
+RMD160 4755ac7a9354bb86af216d8cacfead6f85123640 Test-Harness-2.56.tar.gz 65088
+SHA256 8067fbb231153e4c4edefd3bfda6651c5f9842d4cafd40edbbc0cf6184927d1f Test-Harness-2.56.tar.gz 65088
