@@ -1,6 +1,10 @@
 # ChangeLog for perl-core/Test-Harness
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/Test-Harness/ChangeLog,v 1.9 2006/05/26 10:37:06 gmsoft Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/Test-Harness/ChangeLog,v 1.10 2006/05/26 13:47:52 flameeyes Exp $
+
+  26 May 2006; Diego Pettenò <flameeyes@gentoo.org>
+  Test-Harness-2.56.ebuild:
+  Add ~x86-fbsd keyword.
 
   26 May 2006; Guy Martin <gmsoft@gentoo.org> Test-Harness-2.56.ebuild:
   Stable on hppa.
