@@ -1,6 +1,9 @@
 # ChangeLog for perl-core/PodParser
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/PodParser/ChangeLog,v 1.13 2006/05/26 11:06:50 gmsoft Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/PodParser/ChangeLog,v 1.14 2006/05/26 13:46:29 flameeyes Exp $
+
+  26 May 2006; Diego Pettenò <flameeyes@gentoo.org> PodParser-1.34.ebuild:
+  Add ~x86-fbsd keyword.
 
   26 May 2006; Guy Martin <gmsoft@gentoo.org> PodParser-1.32.ebuild:
   Stable on hppa.
